public/styles/style.css
/* ... */
@media (min-width: 640px) {
  .sm\:my-0 {
    margin-top: 0px;
    margin-bottom: 0px;
  }

  .sm\:h-10 {
    height: 2.5rem;
  }

  .sm\:w-10 {
    width: 2.5rem;
  }

  .sm\:p-2 {
    padding: 0.5rem;
  }
}

@media (min-width: 768px) {
  .md\:w-auto {
    width: auto;
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:overflow-x-auto {
    overflow-x: auto;
  }

  .md\:border-transparent {
    border-color: transparent;
  }

  .md\:px-20 {
    padding-left: 5rem;
    padding-right: 5rem;
  }

  .md\:py-4 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  .md\:pb-10 {
    padding-bottom: 2.5rem;
  }

  .md\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }

  .md\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .md\:leading-normal {
    line-height: 1.5;
  }
}

@media (min-width: 1024px) {
  .lg\:max-w-\[20rem\] {
    max-width: 20rem;
  }

  .lg\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .lg\:flex-row-reverse {
    flex-direction: row-reverse;
  }

  .lg\:text-left {
    text-align: left;
  }
}

@media (min-width: 1280px) {
  .xl\:order-1 {
    order: 1;
  }

  .xl\:order-2 {
    order: 2;
  }

  .xl\:order-last {
    order: 9999;
  }

  .xl\:mx-0 {
    margin-left: 0px;
    margin-right: 0px;
  }

  .xl\:mt-0 {
    margin-top: 0px;
  }

  .xl\:block {
    display: block;
  }

  .xl\:flex {
    display: flex;
  }

  .xl\:hidden {
    display: none;
  }

  .xl\:w-auto {
    width: auto;
  }

  .xl\:w-fit {
    width: -moz-fit-content;
    width: fit-content;
  }

  .xl\:flex-row {
    flex-direction: row;
  }

  .xl\:items-center {
    align-items: center;
  }

  .xl\:justify-center {
    justify-content: center;
  }

  .xl\:border-0 {
    border-width: 0px;
  }

  .xl\:p-0 {
    padding: 0px;
  }

  .xl\:px-2 {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  .xl\:text-lg {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }

  .xl\:text-secondary-focus {
    --tw-text-opacity: 1;
    color: hsl(var(--sf, var(--s)) / var(--tw-text-opacity));
  }
}

@media (min-width: 1536px) {
  .\32xl\:fixed {
    position: fixed;
  }

  .\32xl\:mt-\[5rem\] {
    margin-top: 5rem;
  }

  .\32xl\:px-4 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

